--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
         - ubuntu-18.04
         - ubuntu-16.04
         - macOS-10.14
-        - windows-2019
-        - windows-2016
+        # - windows-2019
+        # - windows-2016
         perl:
         - "5.30.0"
         - "5.28.2"
