--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,8 @@ jobs:
     - name: build
       run: |
         Invoke-WebRequest -Uri https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build -OutFile $env:RUNNER_TEMP\perl-build
-        perl $env:RUNNER_TEMP\perl-build $env:PERL_VERSION $env:RUNNER_TOOL_CACHE\perl\$env:PERL_VERSION\x64 --noman
+        $minor_version = $env:PERL_VERSION.Split(".")[0,1] -join "."
+        perl $env:RUNNER_TEMP\perl-build $env:PERL_VERSION $env:RUNNER_TOOL_CACHE\perl\$minor_version\x64 --noman
       env:
         PERL_VERSION: ${{ matrix.perl }}
       shell: powershell
