--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,6 @@ jobs:
         - ubuntu-18.04
         - ubuntu-16.04
         - macOS-10.14
-        # - windows-2019
-        # - windows-2016
         perl:
         - "5.30.0"
         - "5.28.2"
@@ -63,7 +61,7 @@ jobs:
       run: |
         Invoke-WebRequest -Uri https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build -OutFile $env:RUNNER_TEMP\perl-build
         $minor_version = $env:PERL_VERSION.Split(".")[0,1] -join "."
-        cpan Mozilla::CA
+        cpan -i Mozilla::CA
         perl $env:RUNNER_TEMP\perl-build $env:PERL_VERSION $env:RUNNER_TOOL_CACHE\perl\$minor_version\x64 --noman
       env:
         PERL_VERSION: ${{ matrix.perl }}
