--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,7 @@ jobs:
       run: |
         Invoke-WebRequest -Uri https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build -OutFile $env:RUNNER_TEMP\perl-build
         $minor_version = $env:PERL_VERSION.Split(".")[0,1] -join "."
-        cpan -i Mozilla::CA
-        perl $env:RUNNER_TEMP\perl-build $env:PERL_VERSION $env:RUNNER_TOOL_CACHE\perl\$minor_version\x64 --noman
+        C:\Strawberry\perl\bin\perl.exe $env:RUNNER_TEMP\perl-build $env:PERL_VERSION $env:RUNNER_TOOL_CACHE\perl\$minor_version\x64 --noman
       env:
         PERL_VERSION: ${{ matrix.perl }}
       shell: powershell
