--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       matrix:
         os:
         - windows-2019
-        - windows-2016
+        # - windows-2016
         perl:
         - "5.30.0"
         - "5.28.2"
