first implement of the installer

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/setup-perl.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,8 +25,13 @@
     "semver": "^6.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.3",
     "@types/semver": "^6.0.1",
+    "jest": "^24.9.0",
+    "jest-circus": "^24.9.0",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.6.2"
   }
 }
