--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 
     - uses: actions/upload-artifact@v1
       with:
-        name: ${{ format('perl-{0}-{1}.tar.gz', matrix.perl, matrix.os }}
+        name: ${{ format('perl-{0}-{1}.tar.gz', matrix.perl, matrix.os) }}
         path: "$RUNNER_TEMP/perl.tar.gz"
 
     - name: upload
