--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         RELEASE_ID=$(curl -sSL -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/releases/tags/v0.0.1-alpha" | jq -j .id)
         curl -v -H "Authorization: token $GITHUB_TOKEN" \
           -H "Content-Type: application/octet-stream" \
-          -d "@$RUNNER_TEMP/perl.tar.gz" \
+          --data-binary "@$RUNNER_TEMP/perl.tar.gz" \
           "https://uploads.github.com/repos/$GITHUB_REPOSITORY/releases/$RELEASE_ID/assets?name=perl-$MINOR_VERSION-$BUILD_OS-x64.tar.gz"
       env:
         PERL_VERSION: ${{ matrix.perl }}
