--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: archive
       run: |
-        cd "$RUNNER_TOOL_CACHE" && tar zcf "$RUNNER_TEMP/perl.tar.gz" perl
+        cd "$RUNNER_TOOL_CACHE/perl/$MINOR_VERSION/x64" && tar zcf "$RUNNER_TEMP/perl.tar.gz" .
       env:
         GZIP: "-9"
 
@@ -39,12 +39,13 @@ jobs:
       run: |
         MINOR_VERSION=$(echo -n $(echo $PERL_VERSION | cut -d. -f1,2))
         BUILD_OS=$(uname | tr '[A-Z]' '[a-z]')
-        RELEASE_ID=$(curl -sSL -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/releases/tags/v0.0.1-alpha" | jq -j .id)
+        RELEASE_ID=$(curl -sSL -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/releases/tags/$RELEASE_TAG" | jq -j .id)
         curl -v -H "Authorization: token $GITHUB_TOKEN" \
           -H "Content-Type: application/octet-stream" \
           --data-binary "@$RUNNER_TEMP/perl.tar.gz" \
           "https://uploads.github.com/repos/$GITHUB_REPOSITORY/releases/$RELEASE_ID/assets?name=perl-$MINOR_VERSION-$BUILD_OS-x64.tar.gz"
       env:
+        RELEASE_TAG: v0.0.1-alpha2
         PERL_VERSION: ${{ matrix.perl }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
