drop macOS. done is better than perfect.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - macOS-latest
+        # - macOS-latest # aws-cli doesn't works in macOS 
         perl:
         - "5.30.0"
         - "5.28.2"
