add ACL public-read

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         MINOR_VERSION=$(echo -n $(echo $PERL_VERSION | cut -d. -f1,2))
         BUILD_OS=$(uname | tr '[A-Z]' '[a-z]')
-        aws s3 cp "$RUNNER_TEMP/perl.tar.gz" "s3://shogo82148-actions-setup-perl/$CURRENT_VERSION/perl-$MINOR_VERSION-$BUILD_OS-x64.tar.gz"
+        aws s3 cp --acl public-read "$RUNNER_TEMP/perl.tar.gz" "s3://shogo82148-actions-setup-perl/$CURRENT_VERSION/perl-$MINOR_VERSION-$BUILD_OS-x64.tar.gz"
       env:
         CURRENT_VERSION: v0.0.1
         PERL_VERSION: ${{ matrix.perl }}
