--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
 name: 'Setup Perl environment'
 description: 'Setup a Perl environment and add it to the PATH'
-author: 'GitHub'
+author: 'Ichinose Shogo'
 inputs: 
-  go-version:
-    description: 'The Go version to download (if necessary) and use. Example: 5.30.0'
+  perl-version:
+    description: 'The Perl version to download (if necessary) and use. Example: 5.30.0'
     default: '5.30.0'
 runs:
   using: 'node12'
