--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.6.2"
-  }
+  },
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
