run tests on macOS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        # - macOS-latest
+        - macOS-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v1
