--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,11 @@ jobs:
     strategy:
       matrix:
         os:
-        - ubuntu-latest
-        - macOS-latest
+        - ubuntu-18.04
+        - ubuntu-16.04
+        - windows-2019
+        - windows-2016
+        - macOS-10.14
     steps:
     - name: Checkout
       uses: actions/checkout@v1
