fall back to dmake

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -81,3 +81,4 @@ jobs:
         PERL_VERSION: ${{ matrix.perl }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      continue-on-error: true
