--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ jobs:
         os:
         - ubuntu-18.04
         - ubuntu-16.04
-        - windows-2019
-        - macOS-10.14
+        - windows-latest
+        - macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v1
