--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
     - 'releases/*'
+  pull_request: # for test
 
 jobs:
   windows:
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         perl:
         - "5.30.1"
@@ -25,49 +27,50 @@ jobs:
         - "5.24.2"
         - "5.24.1"
         - "5.24.0"
-        # builds fail with these versions, I gave up :(
-        # - "5.22.4"
-        # - "5.22.3"
-        # - "5.22.2"
-        # - "5.22.1"
-        # - "5.22.0"
-        # - "5.20.3"
-        # - "5.20.2"
-        # - "5.20.1"
-        # - "5.20.0"
-        # - "5.18.4"
-        # - "5.18.3"
-        # - "5.18.2"
-        # - "5.18.1"
-        # - "5.18.0"
-        # - "5.16.3"
-        # - "5.16.2"
-        # - "5.16.1"
-        # - "5.16.0"
-        # - "5.14.4"
-        # - "5.14.3"
-        # - "5.14.2"
-        # - "5.14.1"
-        # - "5.14.0"
-        # - "5.12.5"
-        # - "5.12.4"
-        # - "5.12.3"
-        # - "5.12.2"
-        # - "5.12.1"
-        # - "5.12.0"
-        # - "5.10.1"
-        # - "5.10.1"
-        # - "5.10.0"
-        # - "5.8.9"
-        # - "5.8.8"
-        # - "5.8.7"
-        # - "5.8.6"
-        # - "5.8.5"
+        - "5.22.4"
+        - "5.22.3"
+        - "5.22.2"
+        - "5.22.1"
+        - "5.22.0"
+        - "5.20.3"
+        - "5.20.2"
+        - "5.20.1"
+        - "5.20.0"
+        - "5.18.4"
+        - "5.18.3"
+        - "5.18.2"
+        - "5.18.1"
+        - "5.18.0"
+        - "5.16.3"
+        - "5.16.2"
+        - "5.16.1"
+        - "5.16.0"
+        - "5.14.4"
+        - "5.14.3"
+        - "5.14.2"
+        - "5.14.1"
+        - "5.14.0"
+        - "5.12.5"
+        - "5.12.4"
+        - "5.12.3"
+        - "5.12.2"
+        - "5.12.1"
+        - "5.12.0"
+        - "5.10.1"
+        - "5.10.1"
+        - "5.10.0"
+        - "5.8.9"
+        - "5.8.8"
+        - "5.8.7"
+        - "5.8.6"
+        - "5.8.5"
     steps:
+    - run: git config --global core.autocrlf false
     - uses: actions/checkout@v1
     - name: build
-      shell: pwsh
+      shell: cmd
       run: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         C:\Strawberry\perl\bin\perl.exe build-perl-win.pl
       env:
         PERL_VERSION: ${{ matrix.perl }}
