--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -65,13 +65,21 @@ jobs:
         # - "5.8.6"
         # - "5.8.5"
     steps:
-    - uses: actions/checkout@v1
-    - name: build
-      shell: pwsh
-      run: |
-        C:\Strawberry\perl\bin\perl.exe scripts/build-perl-win.pl
-      env:
-        PERL_VERSION: ${{ matrix.perl }}
+      - uses: actions/checkout@v1
+      - name: setup built-in perl
+        shell: bash
+        run: echo "::add-path::C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
+      - name: Host perl -V
+        run: perl -V
+      - name: gcc --version
+        run: gcc --version
+        shell: bash
+        run: |
+          cpanm --installdeps .
+          perl build-perl-win.pl
+        env:
+          PERL_VERSION: ${{ matrix.perl }}
+        working-directory: ./scripts
 
     # - name: upload
     #   shell: pwsh
