fix syntax error

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -73,6 +73,8 @@ jobs:
         run: perl -V
       - name: gcc --version
         run: gcc --version
+
+      - name: build
         shell: bash
         run: |
           cpanm --installdeps .
