--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -81,6 +81,7 @@ jobs:
           perl build-perl-win.pl
         env:
           PERL_VERSION: ${{ matrix.perl }}
+          PERL5LIB: "C:\\strawberry\\perl\\lib;C:\\strawberry\\perl\\vendor\\lib;C:\\strawberry\\perl\\site\\lib"
         working-directory: ./scripts
 
     # - name: upload
