--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -77,7 +77,7 @@ jobs:
       - name: build
         shell: bash
         run: |
-          cpanm --installdeps .
+          perl cpanm --installdeps .
           perl build-perl-win.pl
         env:
           PERL_VERSION: ${{ matrix.perl }}
